--- a/tools/index.html
+++ b/tools/index.html
@@ -12,6 +12,8 @@
         <li><a href="002-html-list-generator/">002 - HTML List Generator</a></li>
         <li><a href="003-csv-to-json-converter/">003 - CSV to JSON Converter</a></li>
         <li><a href="004-case-converter/">004 - Case Converter</a></li>
+        <li><a href="007-bulk-image-resizer/resizer-multi.html">007 - Bulk Image Resizer</a></li>
+        <li><a href="008-diff-entre-dois-arrays/">008 - Diff Arays</a></li>
     </ul>
 </body>
 </html>
