--- a/tools/008-compare-two-lists/compare-two-lists.html
+++ b/tools/008-compare-two-lists/compare-two-lists.html
@@ -233,6 +233,10 @@
         </div>
         <p>The symmetric difference of two sets is the set of elements that are in one of the sets, but not at its intersection.</p>
 
+        <h2>Important note</h2>
+
+        <p>There is no limitation on the maximum number of rows allowed in a list, however, if you put in too large a volume of data, the browser may slow down or even crash for a moment.</p>
+        
         <div class="notes">
             <div class="image"></div>
             <div class="message">
