New tool Find and Replace Text in progress.

--- a/tools/index.html
+++ b/tools/index.html
@@ -16,6 +16,7 @@
         <li><a href="006-uppercase-converter/">006 - Uppercase Converter</a></li>
         <li><a href="007-bulk-image-resizer/resizer-multi.html">007 - Bulk Image Resizer</a></li>
         <li><a href="008-compare-two-lists/">008 - Compare Two Lists</a></li>
+        <li><a href="009-find-and-replace-text-online/">006 - Find and Replace Text Online</a></li>
     </ul>
 </body>
 </html>
