--- a/tools/009-find-and-replace-text-online/index.html
+++ b/tools/009-find-and-replace-text-online/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h1>Find and Replace Text Online</h1>
 
-        <p>This is a <strong>online text replacer tool</strong> that allows you to find and replace text saving your time when you need to change some words in a large document.</p>
+        <p>This is an <strong>online text replacer tool</strong> that allows you to find and replace text saving your time when you need to change some words in a large document.</p>
         
         <div class="row">
             <div class="col-sm-12 mb-3">
