Added more content on post tool.

--- a/tools/004-case-converter/index.html
+++ b/tools/004-case-converter/index.html
@@ -69,6 +69,29 @@
                 </div>
             </div>
             <div class="more-notes">
+                <h2>WHAT IS TEXT/LETTER CASE?</h2>
+                <p>Letter case (or text case) is the distinction between uppercase and lowercase letters. Uppercase letters are also known as large letters, capital letters, upper case, capitals, caps and majuscule (more formal). Similarly lowercase letters are known as small letters, lower case or minuscule (more formal). Systems that distinguish between uppercase and lowercase letters have two parallel sets of letters, making it possible to match each letter with its respective pair. Each variant pair of the same letter have the same name and pronunciation and are treated identically when sorting in alphabetical order.</p>
+
+                <p>In the children's learning process, for example, they begin to learn to recognize the symbols of each of the uppercase vowels, to later learn the version of the lowercase vowels (or vice versa), and then continue to learn the uppercase consonant letters to later learn and associate them with the lowercase consonant versions.</p>
+
+                <p>In programming, in general, upper and lower case letters are considered as different symbols, that is, the string "a" is different from the string "A". For these letters to be considered the same symbol, it is necessary to enable the "case insensitive" mode. Thus, if we perform the comparison "a" == "A", with case insensitive enabled, the result will be true.</p>
+
+                <p>In orthography, lowercase and lowercase letters are generally applied in a mixed way in a text, and their use is prescribed by the grammatical conventions of each language. Capital letters are reserved for special purposes, such as the letters of a given name or acronyms.</p>
+
+                <h3>Letter Case Usage Contexts</h3>
+                <p>There are several contexts where it is agreed to use only one type of case or to use it in a specific format. The following are some practical cases.</p>
+
+                <h4>Use of text cases in programming</h4>
+                <p>In programming languages ​​like C, C ++, Java, JavaScript, PHP, by convention, lowercase letters are always used for variable names and uppercase letters for constant names. For these two letter case types, when it is necessary to write the name of a variable or constant with two words, the "camel case" format is used, which means to unite (concatenate the words removing the spaces) the two words, to start lowercase the first word and transform the first letter of the second word to uppercase, for example: myVariable, letterCase, upperCase, camelCase. In the case of a variable with three or more words, it would follow the same logic: myLetterCase, textCaseConverter. The union of constants with two or more words, in turn, is done in the snake case (snake_case) format, where spaces are replaced by the underscore symbol: LETTER_CASE, TEXT_CASE_CONVERTER.</p>
+
+                <p>There are other situations in programming where other types of conventions are applied. Class names in Java are written in the upper camel case format, also known as "Pascal Case", where the camel case style is applied, but the first letter of the variable starts with a capital letter, for example: LetterCase, TextCaseConverter. Package names in Java are all written in lowercase: lettercasepackage, textcaseconverter.</p>
+
+                <h4>Use of letter cases in mathematics</h4>
+                <p>In mathematics, uppercase letters are used to indicate sets and lowercase letters represent members of sets. Lower case letters also represent names of functions and variables, like the f(x) function.</p>
+
+                <h4>Use of letter cases in texts and chats on the web</h4>
+                <p>In informal writing among friends on the internet, when a sentence is written in all caps, it gives the feeling that the person who wrote it is shouting. When using only one or two words in uppercase, in the middle of a text, this can indicate emphasis</p>.
+
                 <h2>Letter Case Conversion Functions</h2>
                 <p>In this case converter tool you'll find these following case type functions:</p>
                 <h3 class="case-name">Lowercase converter</h3>
