--- a/tools/index.html
+++ b/tools/index.html
@@ -18,5 +18,10 @@
         <li><a href="008-compare-two-lists/">008 - Compare Two Lists</a></li>
         <li><a href="009-find-and-replace-text-online/">006 - Find and Replace Text Online</a></li>
     </ul>
+
+    <h1>Blog</h1>
+    <ul>
+        <li><a href="blog/">Blog folder</a></li>
+    </ul>
 </body>
 </html>
